syntax = "proto3";

option go_package = "github.com/loheagn/wukuard/grpc";
option java_multiple_files = true;
option java_package = "com.github.loheagn.wukuard.grpc";
option java_outer_classname = "WukuardProto";

package grpc;

service SyncNet {
  // HeartBeat : client sends info about itself to server
  // and server returns all information about the current network
  rpc HeartBeat (PeerRequest) returns (NetWorkResponse) {}
}

message PeerRequest {
  string endpoint = 1;
  string publicKey = 2;

  string macAddress = 4;
  string hostname = 5;
}

message PeerResponse {
  string endpoint = 1;
  string publicKey = 2;
  repeated string allowedIPs = 3;
}

message NetWorkResponse {
  repeated PeerResponse peerList = 1;
}
